# WomCast

./: .coverage  .dockerignore  .editorconfig  .env.example  .env.template  .gitignore  AGENT_INSTRUCTIONS.txt  CHANGELOG.md  README.md  chroma.sqlite3  docker-compose.yml  package-lock.json  package.json
apps/backend/: __init__.py  chroma.sqlite3  metadata_config.json  perf_wrapper.py  pyproject.toml  settings.json  temp_intent_test.py  womcast.db
apps/backend/ai/: __init__.py
apps/backend/backups/: womcast_backup_20251102_133925.db
apps/backend/cast/: __init__.py  audio_relay.py  ice_config.py  main.py  mdns.py  sessions.py  test_audio_relay.py  test_ice_config.py  test_qr.py  test_sessions.py
apps/backend/common/: __init__.py  backup.py  database.py  health.py  resilience.py  settings.py
apps/backend/connectors/: __init__.py  test_connectors.py
apps/backend/gateway/: main.py
apps/backend/livetv/: __init__.py  epg.py  main.py  test_epg.py
apps/backend/metadata/: README_FETCHERS.md  fetchers.py  indexer.py  main.py
apps/backend/playback/: __init__.py  cec_helper.py  cec_routes.py  kodi_client.py  main.py  test_cec.py
apps/backend/search/: main.py
apps/backend/settings/: __init__.py  main.py
apps/backend/storage/: __init__.py  main.py  network.py
apps/backend/tests/: test_cec_router.py  test_chroma_manager.py  test_database.py  test_health.py  test_indexer.py  test_kodi_client.py  test_legal_terms.py  test_search_service.py  test_settings_privacy.py
apps/backend/voice/: __init__.py  main.py  model_manager.py  server_audio.py  stt.py  test_history.py  test_models.py  test_server_audio.py  test_stt.py
apps/backend/voice_history/: history.jsonl
apps/backend/womcast_backend.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
(+116 files in other folders)
